# zeno-bridge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CROSS_PLATFORM_QA.md  DAEMON_CONTRACT.md  IT_DEPLOYMENT.md
packaging/: SIGNING.md
scripts/: install_autostart_linux.sh  install_autostart_macos.sh  install_autostart_windows.ps1  install_macos_scheme_handler.sh  uninstall_autostart_linux.sh  uninstall_autostart_macos.sh  uninstall_autostart_windows.ps1
src/zeno_bridge/: __init__.py  __main__.py  cli.py  config.py  daemon.py  logging_util.py  spawn.py
src/zeno_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli_parse.py
