[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zeno-bridge"
version = "0.1.0"
description = "Thin local agent: zeno:// handler, launch token exchange, spawn DCC with ZENO_LAUNCH_CONTEXT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
zeno-bridge = "zeno_bridge.cli:main"
zeno-bridge-daemon = "zeno_bridge.daemon:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
